fix : 사이드 메뉴  z-index변경

--- a/css/guide.css
+++ b/css/guide.css
@@ -84,7 +84,6 @@
 
 .guide-side {
 	position: fixed;
-	z-index: 3;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -94,6 +93,7 @@
 	color: #333;
 	box-sizing: border-box;
 	letter-spacing: 0;
+	z-index: 9999;
 }
 
 
